tests/snapshots/snapshots__budget_tomli_1000.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 1000 (977 words)

CHANGELOG.md
     1→# Changelog …

README.md
     5→# Tomli
     7→> A lil' TOML parser
     8→
     9→**Table of Contents** *generated with [mdformat-toc](https://github.com/hukkin/mdformat-toc)*
    10→
    11→<!-- mdformat-toc start --slug=github --maxlevel=6 --minlevel=2 -->
    12→
    13→- [Intro](#intro)
    14→- [Installation](#installation)
    15→- [Usage](#usage)
      →…
    32→## Intro<a name="intro"></a>
    34→Tomli is a Python library for parsing [TOML](https://toml.io).
    35→Version 2.4.0 and later are compatible with [TOML v1.1.0](https://toml.io/en/v1.1.0).
    36→Older versions are [TOML v1.0.0](https://toml.io/en/v1.0.0) compatible.
    37→
    38→A version of Tomli, the `tomllib` module,
    39→was added to the standard library in Python 3.11
    40→via [PEP 680](https://www.python.org/dev/peps/pep-0680/).
      →…
    50→## Installation<a name="installation"></a>
    52→```bash
    53→pip install tomli
    54→```
    55→
    56→## Usage<a name="usage"></a>
   152→## FAQ<a name="faq"></a>
   201→## Performance<a name="performance"></a>
   203→The `benchmark/` folder in this repository contains a performance benchmark for comparing the various Python TOML parsers.
   204→
   205→Below are the results for commit [064e492](https://github.com/hukkin/tomli/tree/064e492919b2338def788753b8c981c9131334c0).
   206→

benchmark/README.md
     1→# Benchmark …
     3→## Acknowledgments
     5→This benchmark was shamelessly copied from
     6→[pytomlpp](https://github.com/bobfang1992/pytomlpp/tree/e6b03726f8347c6a6757f520ad1b5fab68ed8534/benchmark)
      →…
    10→## Running

benchmark/data.toml

benchmark/run.py
    15→def benchmark …
    37→def run …

fuzzer/fuzz.py
     1→import atheris
     4→    from math import isnan
     5→    import sys
     6→    import warnings
     8→    import tomli_w
    10→    import tomli
    20→def test_one_input(input_bytes: bytes) -> None:
    53→def print_err(data):
    59→def normalize_toml_obj(toml_obj: dict) -> None:
    60→    """Make NaNs equal when compared (without using recursion)."""
    71→def main():

profiler/profiler_script.py
     8→from pathlib import Path
    10→import tomli

pyproject.toml
     1→[build-system …
     5→[project …
    28→[project.urls …
    33→[tool.isort …
    46→[tool.tox …
    51→[tool.tox.env_run_base …
    58→[tool.tox.env."profile" …
    75→[tool.tox.env."pre-commit" …
    83→[tool.tox.env."benchmark" …
    92→[tool.tox.env."benchmark-pypi" …
   105→[tool.tox.env."benchmark-import" …
   111→[tool.tox.env."fuzz" …
   129→[tool.coverage.run …
   133→[tool.coverage.report …
   145→[tool.mypy …
   157→[[tool.mypy.overrides …
   161→[[tool.mypy.overrides …
   167→[[tool.mypy.overrides …

scripts/use_setuptools.py
    12→def use_setuptools() -> None:

setup.py

src/tomli/__init__.py
     1→# SPDX-License-Identifier: MIT
     2→# SPDX-FileCopyrightText: 2021 Taneli Hukkinen
     3→# Licensed to PSF under a Contributor Agreement.
     4→
     5→__all__ = ("loads", "load", "TOMLDecodeError")
     6→__version__ = "2.4.0"  # DO NOT EDIT THIS LINE MANUALLY. LET bump2version UTILITY DO IT
     8→from ._parser …

src/tomli/_parser.py
     7→import sys …
     8→from types …
    10→from ._re …
    19→TYPE_CHECKING = False
    21→    from collections.abc …
    22→    from typing …
    24→    from ._types …
    26→# Inline tables/arrays are implemented using recursion. Pathologically
    27→# nested documents cause pure Python to raise RecursionError (which is OK),
    28→# but mypyc binary wheels will crash unrecoverably (not OK). According to
    29→# mypyc docs this will be fixed in the future:
    30→# https://mypyc.readthedocs.io/en/latest/differences_from_python.html#stack-overflows
    31→# Before mypyc's fix is in, recursion needs to be limited by this library.
    32→# Choosing `sys.getrecursionlimit()` as maximum inline table/array nesting
    33→# level, as it allows more nesting than pure Python, but still seems a far
    34→# lower number than where mypyc binaries crash.
    35→MAX_INLINE_NESTING: Final = sys.getrecursionlimit()
    37→ASCII_CTRL: Final = frozenset(chr(i) for i in range(32)) | frozenset(chr(127))
    39→# Neither of these sets include quotation mark or backslash. They are
    40→# currently handled as separate cases in the parser functions.
    41→ILLEGAL_BASIC_STR_CHARS: Final = ASCII_CTRL - frozenset("\t")
    42→ILLEGAL_MULTILINE_BASIC_STR_CHARS: Final = ASCII_CTRL - frozenset("\t\n")
    44→ILLEGAL_LITERAL_STR_CHARS: Final = ILLEGAL_BASIC_STR_CHARS
    45→ILLEGAL_MULTILINE_LITERAL_STR_CHARS: Final = ILLEGAL_MULTILINE_BASIC_STR_CHARS
    47→ILLEGAL_COMMENT_CHARS: Final = ILLEGAL_BASIC_STR_CHARS
    49→TOML_WS: Final = frozenset(" \t")
    50→TOML_WS_AND_NEWLINE: Final = TOML_WS | frozenset("\n")
    51→BARE_KEY_CHARS: Final = frozenset(
    54→KEY_INITIAL_CHARS: Final = BARE_KEY_CHARS | frozenset("\"'")
    55→HEXDIGIT_CHARS: Final = frozenset("abcdef" "ABCDEF" "0123456789")
    57→BASIC_STR_ESCAPE_REPLACEMENTS: Final = MappingProxyType(
    71→class DEPRECATED_DEFAULT:
    72→    """Sentinel to be used as default arg during deprecation
    73→    period of TOMLDecodeError's free-form arguments."""
    76→class TOMLDecodeError(ValueError):
    77→    """An error raised if a document is not valid TOML.
    78→
    79→    Adds the following attributes to ValueError:
    80→    msg: The unformatted error message
    81→    doc: The TOML document being parsed
      →…
    86→
   220→class Flags:
   221→    """Flags that map to parsed keys/namespaces."""
   222→
   223→    # Marks an immutable namespace (inline array or inline table).
   224→    FROZEN: Final = 0
   225→    # Marks a nest that has been explicitly created and can no longer
   226→    # be opened using the "[table]" syntax.
   227→    EXPLICIT_NEST: Final = 1
   228→
   278→class NestedDict:
   312→class Output:

src/tomli/_re.py
     7→from datetime …
     8→from functools …
     9→import re …
    11→TYPE_CHECKING = False
    13→    from typing …
    15→    from ._types …
    17→_TIME_RE_STR: Final = r"""
    26→RE_NUMBER: Final = re.compile(
    27→    r"""
    28→0
    29→(?:
    30→    x[0-9A-Fa-f](?:_?[0-9A-Fa-f])*   # hex
    31→    |
    32→    b[01](?:_?[01])*                 # bin
    33→    |
    34→    o[0-7](?:_?[0-7])*               # oct
    35→)
    36→|
    37→[+-]?(?:0|[1-9](?:_?[0-9])*)         # dec, integer part
    38→(?P<floatpart>
    39→    (?:\.[0-9](?:_?[0-9])*)?         # optional fractional part
    40→    (?:[eE][+-]?[0-9](?:_?[0-9])*)?  # optional exponent part
    41→)
    42→""",
    45→RE_LOCALTIME: Final = re.compile(_TIME_RE_STR, flags=re.VERBOSE)
    46→RE_DATETIME: Final = re.compile(
    47→    rf"""
    48→([0-9]{{4}})-(0[1-9]|1[0-2])-(0[1-9]|[12][0-9]|3[01])  # date, e.g. 1988-10-27
    49→(?:
    50→    [Tt ]
    51→    {_TIME_RE_STR}
    52→    (?:([Zz])|([+-])([01][0-9]|2[0-3]):([0-5][0-9]))?  # optional time offset
    53→)?
    54→""",
    95→# No need to limit cache size. This is only ever called on input
    96→# that matched RE_DATETIME, so there is an implicit bound of
    97→# 24 (hours) * 60 (minutes) * 2 (offset direction) = 2880.
    98→@lru_cache(maxsize=None)
    99→def cached_tz(hour_str: str, minute_str: str, sign_str: str) -> timezone:
   100→    sign = 1 if sign_str == "+" else -1
   101→    return timezone(
   102→        timedelta(
   103→            hours=sign * int(hour_str),
   104→            minutes=sign * int(minute_str),
   105→        )
   106→    )

src/tomli/_types.py
     5→from typing import Any, Callable, Tuple

tests/__init__.py
     1→# SPDX-License-Identifier: MIT
     2→# SPDX-FileCopyrightText: 2021 Taneli Hukkinen
     3→# Licensed to PSF under a Contributor Agreement.
     4→
     5→__all__ = ("tomllib",)
     9→import tomli as tomllib

tests/burntsushi.py

tests/data/invalid/_external/toml-test/invalid/key/no-eol-04.toml

tests/data/invalid/_external/toml-test/invalid/key/start-bracket.toml

tests/data/invalid/array-of-tables/overwrite-array-in-parent.toml
     1→[[parent-table.arr …
     2→[parent-table …

tests/data/invalid/array-of-tables/overwrite-bool-with-aot.toml
     2→[[a …

tests/data/invalid/keys-and-vals/overwrite-with-deep-table.toml
     2→[a.b.c.d …

tests/data/invalid/table/redefine-1.toml

tests/data/invalid/table/redefine-2.toml

tests/data/valid/_external/toml-test/valid/bool/bool.json
     2→    "f": {"type": "bool", "value": "false"},
     3→    "t": {"type": "bool", "value": "true"}
     4→}

tests/data/valid/_external/toml-test/valid/comment/everywhere.toml

tests/data/valid/_external/toml-test/valid/comment/tricky.toml

tests/data/valid/_external/toml-test/valid/inline-table/key-dotted-03.toml

tests/data/valid/_external/toml-test/valid/inline-table/key-dotted-04.toml

tests/data/valid/array/array-subtables.json
     1→{"arr …

tests/data/valid/array/open-parent-table.json
     2→  "parent-table …

tests/data/valid/inline-table/empty-inline-table.json
     1→{"empty":  {}}

tests/data/valid/inline-table/multiline-inline-table.json
     2→  "multiline": {
    34→  }
    35→}

tests/test_data.py
     5→import json
     9→from . …
    11→DATA_DIR = Path(__file__).parent / "data"
    13→VALID_FILES = tuple((DATA_DIR / "valid").glob("**/*.toml"))
    21→VALID_FILES_EXPECTED = tuple(_expected_files)
    23→INVALID_FILES = tuple((DATA_DIR / "invalid").glob("**/*.toml"))
    27→class TestData(unittest.TestCase):

tests/test_error.py
    10→from . …
    13→class TestError(unittest.TestCase):

tests/test_misc.py
     5→import copy
    14→from . …
    17→class TestMiscellaneous(unittest.TestCase):

tomllib.md
     1→# `tomllib` – Tomli in the standard library
     3→Tomli was added to the Python standard library in Python 3.11.
     4→
     5→Relevant links:
     6→
     7→- Python Issue Tracker: https://bugs.python.org/issue40059
     8→- Tomli issue tracker: https://github.com/hukkin/tomli/issues/141
      →…
    13→## Converting Tomli to tomllib …
    15→### Sync status
    17→`tomllib` in CPython commit https://github.com/python/cpython/commit/deaf509e8fc6e0363bd6f26d52ad42f976ec42f2
    18→matches Tomli commit https://github.com/hukkin/tomli/commit/7e563eed5286b5d46b8290a9f56a86d955b23a9a
    19→
    20→### Steps to convert
    22→- Move everything in `tomli:src/tomli` to `cpython:Lib/tomllib`. Exclude `py.typed`.
    23→
    24→- Remove `__version__ = ...` line from `cpython:Lib/tomllib/__init__.py`
    25→
      →…
