tests/snapshots/snapshots__budget_tomli_2000.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 2000 (2017 tokens)

CHANGELOG.md
     1→# Changelog

README.md
     5→# Tomli
     7→> A lil' TOML parser
     8→
      →…
    32→## Intro<a name="intro"></a>
    50→## Installation<a name="installation"></a>
    56→## Usage<a name="usage"></a>
   152→## FAQ<a name="faq"></a>
   201→## Performance<a name="performance"></a>

benchmark/README.md
     1→# Benchmark
     3→## Acknowledgments
    10→## Running

benchmark/data.toml

benchmark/run.py
    15→def benchmark …
    37→def run …

fuzzer/fuzz.py
     1→import atheris
     4→    from math import isnan
     5→    import sys
     6→    import warnings
     8→    import tomli_w
    10→    import tomli
    20→def test_one_input(input_bytes: bytes) -> None:
    53→def print_err(data):
    59→def normalize_toml_obj(toml_obj: dict) -> None:
    60→    """Make NaNs equal when compared (without using recursion)."""
    71→def main():

profiler/profiler_script.py
     8→from pathlib import Path
    10→import tomli

pyproject.toml
     1→[build-system]
     5→[project]
    28→[project.urls]
    33→[tool.isort]
    46→[tool.tox]
    51→[tool.tox.env_run_base]
    58→[tool.tox.env."profile"]
    75→[tool.tox.env."pre-commit"]
    83→[tool.tox.env."benchmark"]
    92→[tool.tox.env."benchmark-pypi"]
   105→[tool.tox.env."benchmark-import"]
   111→[tool.tox.env."fuzz"]
   129→[tool.coverage.run]
   133→[tool.coverage.report]
   145→[tool.mypy]
   157→[[tool.mypy.overrides]]
   161→[[tool.mypy.overrides]]
   167→[[tool.mypy.overrides]]

scripts/use_setuptools.py
    12→def use_setuptools() -> None:

src/tomli/__init__.py
     1→# SPDX-License-Identifier: MIT
     2→# SPDX-FileCopyrightText: 2021 Taneli Hukkinen
     3→# Licensed to PSF under a Contributor Agreement.
     5→__all__ = ("loads", "load", "TOMLDecodeError")
     6→__version__ = "2.4.0"  # DO NOT EDIT THIS LINE MANUALLY. LET bump2version UTILITY DO IT
     8→from ._parser import TOMLDecodeError, load, loads

src/tomli/_parser.py
     7→import sys
     8→from types import MappingProxyType
    10→from ._re …
    19→TYPE_CHECKING = False
    21→    from collections.abc import Iterable
    22→    from typing import IO, Any, Final
    24→    from ._types …
    26→# Inline tables/arrays are implemented using recursion. Pathologically
    27→# nested documents cause pure Python to raise RecursionError (which is OK),
    28→# but mypyc binary wheels will crash unrecoverably (not OK). According to
    29→# mypyc docs this will be fixed in the future:
      →…
    35→MAX_INLINE_NESTING: Final = sys.getrecursionlimit()
    37→ASCII_CTRL: Final = frozenset(chr(i) for i in range(32)) | frozenset(chr(127))
    39→# Neither of these sets include quotation mark or backslash. They are
    40→# currently handled as separate cases in the parser functions.
    41→ILLEGAL_BASIC_STR_CHARS: Final = ASCII_CTRL - frozenset("\t")
    42→ILLEGAL_MULTILINE_BASIC_STR_CHARS: Final = ASCII_CTRL - frozenset("\t\n")
    44→ILLEGAL_LITERAL_STR_CHARS: Final = ILLEGAL_BASIC_STR_CHARS
    45→ILLEGAL_MULTILINE_LITERAL_STR_CHARS: Final = ILLEGAL_MULTILINE_BASIC_STR_CHARS
    47→ILLEGAL_COMMENT_CHARS: Final = ILLEGAL_BASIC_STR_CHARS
    49→TOML_WS: Final = frozenset(" \t")
    50→TOML_WS_AND_NEWLINE: Final = TOML_WS | frozenset("\n")
    51→BARE_KEY_CHARS: Final = frozenset(
    54→KEY_INITIAL_CHARS: Final = BARE_KEY_CHARS | frozenset("\"'")
    55→HEXDIGIT_CHARS: Final = frozenset("abcdef" "ABCDEF" "0123456789")
    57→BASIC_STR_ESCAPE_REPLACEMENTS: Final = MappingProxyType(
    71→class DEPRECATED_DEFAULT:
    76→class TOMLDecodeError(ValueError):
    86→
   220→class Flags:
   222→
   223→    # Marks an immutable namespace (inline array or inline table).
   224→    FROZEN: Final = 0
   278→class NestedDict:
   312→class Output:

src/tomli/_re.py
     7→from datetime import date, datetime, time, timedelta, timezone, tzinfo
     8→from functools import lru_cache
     9→import re
    11→TYPE_CHECKING = False
    13→    from typing import Any, Final
    15→    from ._types import ParseFloat
    17→_TIME_RE_STR: Final = r"""
    26→RE_NUMBER: Final = re.compile(
    27→    r"""
      →    …
    45→RE_LOCALTIME: Final = re.compile(_TIME_RE_STR, flags=re.VERBOSE)
    46→RE_DATETIME: Final = re.compile(
    47→    rf"""
      →    …
    59→def match_to_datetime(match: re.Match[str]) -> datetime | date:
    60→    """Convert a `RE_DATETIME` match to `datetime.datetime` or `datetime.date`.
    61→
    62→    Raises ValueError if the match does not correspond to a valid date
    63→    or datetime.
    64→    """
    95→# No need to limit cache size. This is only ever called on input
    96→# that matched RE_DATETIME, so there is an implicit bound of
    97→# 24 (hours) * 60 (minutes) * 2 (offset direction) = 2880.
    98→@lru_cache(maxsize=None)
    99→def cached_tz(hour_str: str, minute_str: str, sign_str: str) -> timezone:
   100→    sign = 1 if sign_str == "+" else -1
   101→    return timezone(
   102→        timedelta(
   103→            hours=sign * int(hour_str),
      →            …
   109→def match_to_localtime(match: re.Match[str]) -> time:
   116→def match_to_number(match: re.Match[str], parse_float: ParseFloat) -> Any:

src/tomli/_types.py
     5→from typing import Any, Callable, Tuple

tests/__init__.py
     1→# SPDX-License-Identifier: MIT
      →…
     5→__all__ = ("tomllib",)
     9→import tomli as tomllib

tests/burntsushi.py
    11→def convert(obj):
    42→def normalize(obj: Any) -> Any:

tests/data/valid/trailing-comma.json
     1→{"arr":

tests/test_data.py
     5→import json
     9→from . import burntsushi, tomllib
    11→DATA_DIR …
    13→VALID_FILES …
    21→VALID_FILES_EXPECTED …
    23→INVALID_FILES …
    27→class TestData(unittest.TestCase):
    28→    def test_invalid(self):
    40→    def test_valid(self):

tests/test_error.py
    10→from . import tomllib
    13→class TestError(unittest.TestCase):

tests/test_misc.py
     5→import copy
    14→from . import tomllib
    17→class TestMiscellaneous(unittest.TestCase):

tomllib.md
     1→# `tomllib` – Tomli in the standard library
     3→Tomli was added to the Python standard library in Python 3.11.
     4→
     5→Relevant links:
     6→
      →…
    13→## Converting Tomli to tomllib
    15→### Sync status
    20→### Steps to convert
