tests/snapshots/snapshots__budget_tomli_4000.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 4000 (4038 tokens)

CHANGELOG.md
     1→# Changelog

README.md
     5→# Tomli
     7→> A lil' TOML parser
     8→
     9→**Table of Contents** *generated with [mdformat-toc](https://github.com/hukkin/mdformat-toc)*
    10→
    11→<!-- mdformat-toc start --slug=github --maxlevel=6 --minlevel=2 -->
    12→
    13→- [Intro](#intro)
    14→- [Installation](#installation)
    15→- [Usage](#usage)
      →…
    32→## Intro<a name="intro"></a>
    34→Tomli is a Python library for parsing [TOML](https://toml.io).
      →…
    50→## Installation<a name="installation"></a>
    52→```bash
      →…
    56→## Usage<a name="usage"></a>
   152→## FAQ<a name="faq"></a>
   201→## Performance<a name="performance"></a>
   203→The `benchmark/` folder in this repository contains a performance benchmark for comparing the various Python TOML parsers.
      →…

benchmark/README.md
     1→# Benchmark
     3→## Acknowledgments
     5→This benchmark was shamelessly copied from
      →…
    10→## Running
    12→### Against the local Tomli state
    18→### Against the latest Tomli PyPI release

benchmark/data.toml

benchmark/run.py
    15→def benchmark …
    37→def run …

fuzzer/fuzz.py
     1→import atheris
     4→    from math import isnan
     5→    import sys
     6→    import warnings
     8→    import tomli_w
    10→    import tomli
    20→def test_one_input(input_bytes: bytes) -> None:
    53→def print_err(data):
    59→def normalize_toml_obj(toml_obj: dict) -> None:
    60→    """Make NaNs equal when compared (without using recursion)."""
    71→def main():

profiler/profiler_script.py
     8→from pathlib import Path
    10→import tomli

pyproject.toml
     1→[build-system]
     5→[project]
    28→[project.urls]
    33→[tool.isort]
    46→[tool.tox]
    51→[tool.tox.env_run_base]
    58→[tool.tox.env."profile"]
    75→[tool.tox.env."pre-commit"]
    83→[tool.tox.env."benchmark"]
    92→[tool.tox.env."benchmark-pypi"]
   105→[tool.tox.env."benchmark-import"]
   111→[tool.tox.env."fuzz"]
   129→[tool.coverage.run]
   133→[tool.coverage.report]
   145→[tool.mypy]
   157→[[tool.mypy.overrides]]
   161→[[tool.mypy.overrides]]
   167→[[tool.mypy.overrides]]

scripts/use_setuptools.py
    12→def use_setuptools() -> None:

setup.py

src/tomli/__init__.py
     1→# SPDX-License-Identifier: MIT
     2→# SPDX-FileCopyrightText: 2021 Taneli Hukkinen
     3→# Licensed to PSF under a Contributor Agreement.
     5→__all__ = ("loads", "load", "TOMLDecodeError")
     6→__version__ = "2.4.0"  # DO NOT EDIT THIS LINE MANUALLY. LET bump2version UTILITY DO IT
     8→from ._parser import TOMLDecodeError, load, loads

src/tomli/_parser.py
     7→import sys
     8→from types import MappingProxyType
    10→from ._re …
    19→TYPE_CHECKING = False
    21→    from collections.abc import Iterable
    22→    from typing import IO, Any, Final
    24→    from ._types …
    26→# Inline tables/arrays are implemented using recursion. Pathologically
    27→# nested documents cause pure Python to raise RecursionError (which is OK),
    28→# but mypyc binary wheels will crash unrecoverably (not OK). According to
    29→# mypyc docs this will be fixed in the future:
    30→# https://mypyc.readthedocs.io/en/latest/differences_from_python.html#stack-overflows
    31→# Before mypyc's fix is in, recursion needs to be limited by this library.
    32→# Choosing `sys.getrecursionlimit()` as maximum inline table/array nesting
    33→# level, as it allows more nesting than pure Python, but still seems a far
    34→# lower number than where mypyc binaries crash.
    35→MAX_INLINE_NESTING: Final = sys.getrecursionlimit()
    37→ASCII_CTRL: Final = frozenset(chr(i) for i in range(32)) | frozenset(chr(127))
    39→# Neither of these sets include quotation mark or backslash. They are
    40→# currently handled as separate cases in the parser functions.
    41→ILLEGAL_BASIC_STR_CHARS: Final = ASCII_CTRL - frozenset("\t")
    42→ILLEGAL_MULTILINE_BASIC_STR_CHARS: Final = ASCII_CTRL - frozenset("\t\n")
    44→ILLEGAL_LITERAL_STR_CHARS: Final = ILLEGAL_BASIC_STR_CHARS
    45→ILLEGAL_MULTILINE_LITERAL_STR_CHARS: Final = ILLEGAL_MULTILINE_BASIC_STR_CHARS
    47→ILLEGAL_COMMENT_CHARS: Final = ILLEGAL_BASIC_STR_CHARS
    49→TOML_WS: Final = frozenset(" \t")
    50→TOML_WS_AND_NEWLINE: Final = TOML_WS | frozenset("\n")
    51→BARE_KEY_CHARS: Final = frozenset(
    54→KEY_INITIAL_CHARS: Final = BARE_KEY_CHARS | frozenset("\"'")
    55→HEXDIGIT_CHARS: Final = frozenset("abcdef" "ABCDEF" "0123456789")
    57→BASIC_STR_ESCAPE_REPLACEMENTS: Final = MappingProxyType(
    71→class DEPRECATED_DEFAULT:
    72→    """Sentinel to be used as default arg during deprecation
    73→    period of TOMLDecodeError's free-form arguments."""
    76→class TOMLDecodeError(ValueError):
    77→    """An error raised if a document is not valid TOML.
    78→
    79→    Adds the following attributes to ValueError:
    80→    msg: The unformatted error message
    81→    doc: The TOML document being parsed
    82→    pos: The index of doc where parsing failed
    83→    lineno: The line corresponding to pos
    84→    colno: The column corresponding to pos
    85→    """
    86→
   220→class Flags:
   221→    """Flags that map to parsed keys/namespaces."""
   222→
   223→    # Marks an immutable namespace (inline array or inline table).
   224→    FROZEN: Final = 0
   225→    # Marks a nest that has been explicitly created and can no longer
   226→    # be opened using the "[table]" syntax.
   227→    EXPLICIT_NEST: Final = 1
   228→
   278→class NestedDict:
   312→class Output:

src/tomli/_re.py
     7→from datetime import date, datetime, time, timedelta, timezone, tzinfo
     8→from functools import lru_cache
     9→import re
    11→TYPE_CHECKING = False
    13→    from typing import Any, Final
    15→    from ._types import ParseFloat
    17→_TIME_RE_STR: Final = r"""
    26→RE_NUMBER: Final = re.compile(
    27→    r"""
    28→0
    29→(?:
    30→    x[0-9A-Fa-f](?:_?[0-9A-Fa-f])*   # hex
    31→    |
      →    …
    45→RE_LOCALTIME: Final = re.compile(_TIME_RE_STR, flags=re.VERBOSE)
    46→RE_DATETIME: Final = re.compile(
    47→    rf"""
    48→([0-9]{{4}})-(0[1-9]|1[0-2])-(0[1-9]|[12][0-9]|3[01])  # date, e.g. 1988-10-27
    49→(?:
    50→    [Tt ]
    51→    {_TIME_RE_STR}
      →    …
    59→def match_to_datetime(match: re.Match[str]) -> datetime | date:
    60→    """Convert a `RE_DATETIME` match to `datetime.datetime` or `datetime.date`.
    61→
    62→    Raises ValueError if the match does not correspond to a valid date
    63→    or datetime.
    64→    """
    65→    (
      →    …
    95→# No need to limit cache size. This is only ever called on input
    96→# that matched RE_DATETIME, so there is an implicit bound of
    97→# 24 (hours) * 60 (minutes) * 2 (offset direction) = 2880.
    98→@lru_cache(maxsize=None)
    99→def cached_tz(hour_str: str, minute_str: str, sign_str: str) -> timezone:
   100→    sign = 1 if sign_str == "+" else -1
   101→    return timezone(
   102→        timedelta(
   103→            hours=sign * int(hour_str),
   104→            minutes=sign * int(minute_str),
   105→        )
   106→    )
   109→def match_to_localtime(match: re.Match[str]) -> time:
   110→    hour_str, minute_str, sec_str, micros_str = match.groups()
      →    …
   116→def match_to_number(match: re.Match[str], parse_float: ParseFloat) -> Any:
   117→    if match.group("floatpart"):
      →    …

src/tomli/_types.py
     5→from typing import Any, Callable, Tuple

tests/__init__.py
     1→# SPDX-License-Identifier: MIT
     2→# SPDX-FileCopyrightText: 2021 Taneli Hukkinen
     3→# Licensed to PSF under a Contributor Agreement.
     5→__all__ = ("tomllib",)
     9→import tomli as tomllib

tests/burntsushi.py
     7→import datetime
     8→from typing import Any
    11→def convert(obj):
    42→def normalize(obj: Any) -> Any:
    43→    """Normalize test objects.
    44→
      →…

tests/data/invalid/_external/toml-test/invalid/table/llbrace.toml
     1→[ [table]]

tests/data/invalid/_external/toml-test/invalid/table/newline-01.toml
     1→[tbl

tests/data/invalid/_external/toml-test/invalid/table/newline-03.toml
     1→["tbl"

tests/data/invalid/_external/toml-test/invalid/table/newline-04.toml
     1→[tbl.

tests/data/invalid/_external/toml-test/invalid/table/newline-05.toml
     1→[tbl

tests/data/invalid/_external/toml-test/invalid/table/no-close-08.toml
     1→[''']

tests/data/invalid/_external/toml-test/invalid/table/trailing-dot.toml
     1→[a.]

tests/data/invalid/_external/toml-test/invalid/table/whitespace.toml
     1→[invalid key]

tests/data/invalid/array-of-tables/overwrite-bool-with-aot.toml
     2→[[a]]

tests/data/invalid/inline-table/override-val-with-array.toml
     3→[[inline-t.nest]]

tests/data/invalid/inline-table/override-val-with-table.toml
     3→[inline-t.nest]

tests/data/valid/_external/toml-test/valid/array/bool.json
     2→    "a": [
     5→    ]
     6→}

tests/data/valid/_external/toml-test/valid/array/nested.json
     2→    "nest": [
     5→    ]
      →    …

tests/data/valid/_external/toml-test/valid/example.toml
     3→[numtheory]

tests/data/valid/_external/toml-test/valid/implicit-groups.json
     2→    "a": {
     8→    }
      →    …

tests/data/valid/_external/toml-test/valid/key/dotted-empty.toml
     3→[a]

tests/data/valid/_external/toml-test/valid/key/space.toml
     6→[ " tbl " ]

tests/data/valid/_external/toml-test/valid/table/array-empty.json
     2→    "a": [{}]
     3→}

tests/data/valid/_external/toml-test/valid/table/array-empty.toml
     1→[[a]]

tests/data/valid/_external/toml-test/valid/table/array-many.json
     2→    "people": [

tests/data/valid/_external/toml-test/valid/table/array-one.json
     2→    "people": [{

tests/data/valid/_external/toml-test/valid/table/array-one.toml
     1→[[people]]

tests/data/valid/_external/toml-test/valid/table/empty-name.json
     8→    "a": {

tests/data/valid/_external/toml-test/valid/table/empty.json
     2→    "a": {}
     3→}

tests/data/valid/_external/toml-test/valid/table/empty.toml
     1→[a]

tests/data/valid/_external/toml-test/valid/table/no-eol.json
     2→    "table": {}
     3→}

tests/data/valid/_external/toml-test/valid/table/no-eol.toml
     1→[table]

tests/data/valid/_external/toml-test/valid/table/sub-empty.json
     2→    "a": {

tests/data/valid/_external/toml-test/valid/table/sub.json
     2→    "a": {

tests/data/valid/_external/toml-test/valid/table/whitespace.json
     2→    "valid key": {}
     3→}

tests/data/valid/_external/toml-test/valid/table/whitespace.toml
     1→["valid key"]

tests/data/valid/_external/toml-test/valid/table/without-super.json
     2→    "x": {

tests/data/valid/array/array-subtables.json
     1→{"arr":

tests/data/valid/array/open-parent-table.json
     2→  "parent-table": {

tests/data/valid/boolean.json
     2→  "a": {"type":"bool","value":"true"},
     3→  "b": {"type":"bool","value":"false"}
     4→}

tests/data/valid/five-quotes.json

tests/data/valid/hex-char.json

tests/data/valid/inline-table/empty-inline-table.json
     1→{"empty":  {}}

tests/data/valid/inline-table/multiline-inline-table.json
     2→  "multiline": {

tests/data/valid/trailing-comma.json
     1→{"arr":
     6→  }
     7→}

tests/test_data.py
     5→import json
     6→from pathlib import Path
     7→import unittest
     9→from . import burntsushi, tomllib
    11→DATA_DIR …
    13→VALID_FILES …
    21→VALID_FILES_EXPECTED …
    23→INVALID_FILES …
    27→class TestData(unittest.TestCase):
    28→    def test_invalid(self):
    40→    def test_valid(self):

tests/test_error.py
     7→from typing import Any
     8→import unittest
    10→from . import tomllib
    13→class TestError(unittest.TestCase):

tests/test_misc.py
     5→import copy
    14→from . import tomllib
    17→class TestMiscellaneous(unittest.TestCase):
    18→    def test_load(self):
    29→    def test_incorrect_load(self):
    47→    def test_parse_float(self):
    75→    def test_deepcopy(self):
   103→    def test_inline_array_recursion_limit(self):
   118→    def test_inline_table_recursion_limit(self):
   133→    def test_types_import(self):
   134→        """Test that `_types` module runs.
   135→
      →…

tomllib.md
     1→# `tomllib` – Tomli in the standard library
     3→Tomli was added to the Python standard library in Python 3.11.
     4→
     5→Relevant links:
     6→
     7→- Python Issue Tracker: https://bugs.python.org/issue40059
      →…
    13→## Converting Tomli to tomllib
    15→### Sync status
    20→### Steps to convert
