tests/snapshots/snapshots__budget_tomli_500.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 500 (487 words)

CHANGELOG.md
     1→# Changelog …
README.md
     5→# Tomli
     7→> A lil' TOML parser
     8→
     9→**Table of Contents** *generated with [mdformat-toc](https://github.com/hukkin/mdformat-toc)*
    10→
    11→<!-- mdformat-toc start --slug=github --maxlevel=6 --minlevel=2 -->
    12→
    13→- [Intro](#intro)
    14→- [Installation](#installation)
    15→- [Usage](#usage)
      →…
    32→## Intro<a name="intro"></a> …
    50→## Installation<a name="installation"></a> …
    56→## Usage<a name="usage"></a> …
   152→## FAQ<a name="faq"></a> …
   201→## Performance<a name="performance"></a> …
benchmark/README.md
     1→# Benchmark …
     3→## Acknowledgments …
    10→## Running …
benchmark/data.toml
benchmark/run.py
    15→def benchmark …
    37→def run …
fuzzer/fuzz.py
    20→def test_one_input(input_bytes: bytes) -> None:
    53→def print_err(data):
    59→def normalize_toml_obj(toml_obj: dict) -> None:
    60→    """Make NaNs equal when compared (without using recursion)."""
    71→def main():
profiler/profiler_script.py
     8→from pathlib import Path
    10→import tomli
pyproject.toml
     1→[build-system …
     5→[project …
    28→[project.urls …
    33→[tool.isort …
    46→[tool.tox …
    51→[tool.tox.env_run_base …
    58→[tool.tox.env."profile" …
    75→[tool.tox.env."pre-commit" …
    83→[tool.tox.env."benchmark" …
    92→[tool.tox.env."benchmark-pypi" …
   105→[tool.tox.env."benchmark-import" …
   111→[tool.tox.env."fuzz" …
   129→[tool.coverage.run …
   133→[tool.coverage.report …
   145→[tool.mypy …
   157→[[tool.mypy.overrides …
   161→[[tool.mypy.overrides …
   167→[[tool.mypy.overrides …
scripts/use_setuptools.py
    12→def use_setuptools() -> None:
setup.py
src/tomli/__init__.py
     1→# SPDX-License-Identifier: MIT
     2→# SPDX-FileCopyrightText: 2021 Taneli Hukkinen
     3→# Licensed to PSF under a Contributor Agreement.
     4→
     5→__all__ = ("loads", "load", "TOMLDecodeError")
     6→__version__ …
     8→from ._parser …
src/tomli/_parser.py
    10→from ._re …
    19→TYPE_CHECKING …
    24→    from ._types …
    26→# Inline tables/arrays are implemented using recursion. Pathologically
    27→# nested documents cause pure Python to raise RecursionError (which is OK),
    28→# but mypyc binary wheels will crash unrecoverably (not OK). According to
    29→# mypyc docs this will be fixed in the future:
    30→# https://mypyc.readthedocs.io/en/latest/differences_from_python.html#stack-overflows
      →…
    35→MAX_INLINE_NESTING: Final = sys.getrecursionlimit()
    37→ASCII_CTRL …
    39→# Neither of these sets include quotation mark or backslash. They are
    40→# currently handled as separate cases in the parser functions.
    41→ILLEGAL_BASIC_STR_CHARS: Final = ASCII_CTRL - frozenset("\t")
    42→ILLEGAL_MULTILINE_BASIC_STR_CHARS …
    44→ILLEGAL_LITERAL_STR_CHARS …
    45→ILLEGAL_MULTILINE_LITERAL_STR_CHARS …
    47→ILLEGAL_COMMENT_CHARS …
    49→TOML_WS …
    50→TOML_WS_AND_NEWLINE …
    51→BARE_KEY_CHARS …
    54→KEY_INITIAL_CHARS …
    55→HEXDIGIT_CHARS …
    57→BASIC_STR_ESCAPE_REPLACEMENTS …
    71→class DEPRECATED_DEFAULT:
    76→class TOMLDecodeError(ValueError):
    86→
   220→class Flags:
   222→
   223→    # Marks an immutable namespace (inline array or inline table).
   224→    FROZEN: Final = 0
   278→class NestedDict:
   312→class Output:
src/tomli/_re.py
    11→TYPE_CHECKING …
    15→    from ._types …
    17→_TIME_RE_STR: Final = r"""
    26→RE_NUMBER …
    45→RE_LOCALTIME …
    46→RE_DATETIME …
    95→# No need to limit cache size. This is only ever called on input
    96→# that matched RE_DATETIME, so there is an implicit bound of
    97→# 24 (hours) * 60 (minutes) * 2 (offset direction) = 2880.
    98→@lru_cache(maxsize=None)
    99→def cached_tz(hour_str: str, minute_str: str, sign_str: str) -> timezone:
   100→    sign = 1 if sign_str == "+" else -1
   101→    return timezone(
   102→        timedelta(
   103→            hours=sign * int(hour_str),
   104→            minutes=sign * int(minute_str),
   105→        )
   106→    )
src/tomli/_types.py
     5→from typing import Any, Callable, Tuple
tests/__init__.py
     1→# SPDX-License-Identifier: MIT
     2→# SPDX-FileCopyrightText: 2021 Taneli Hukkinen
      →…
     5→__all__ = ("tomllib",)
tests/burntsushi.py
tests/data/invalid/keys-and-vals/overwrite-with-deep-table.toml
     2→[a.b.c.d …
tests/data/valid/_external/toml-test/valid/bool/bool.json
tests/data/valid/array/array-subtables.json
tests/data/valid/array/open-parent-table.json
tests/test_data.py
    11→DATA_DIR …
    13→VALID_FILES …
    21→VALID_FILES_EXPECTED …
    23→INVALID_FILES …
    27→class TestData(unittest.TestCase):
tests/test_error.py
    13→class TestError(unittest.TestCase):
tests/test_misc.py
    17→class TestMiscellaneous(unittest.TestCase):
tomllib.md
     1→# `tomllib` – Tomli in the standard library
     3→Tomli was added to the Python standard library in Python 3.11.
     4→
     5→Relevant links:
     6→
      →…
    13→## Converting Tomli to tomllib …
    15→### Sync status …
    20→### Steps to convert …
