tests/snapshots/snapshots__budget_tomli_level0.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 3 → level 0 (4 words)

__init__.py
_parser.py
_re.py
_types.py
