tests/snapshots/snapshots__budget_tomli_level1.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 200 → level 1 (124 words)

__init__.py
     5→__all__
     6→__version__
_parser.py
    19→TYPE_CHECKING
    35→MAX_INLINE_NESTING
    37→ASCII_CTRL
    41→ILLEGAL_BASIC_STR_CHARS
    42→ILLEGAL_MULTILINE_BASIC_STR_CHARS
    44→ILLEGAL_LITERAL_STR_CHARS
    45→ILLEGAL_MULTILINE_LITERAL_STR_CHARS
    47→ILLEGAL_COMMENT_CHARS
    49→TOML_WS
    50→TOML_WS_AND_NEWLINE
    51→BARE_KEY_CHARS
    54→KEY_INITIAL_CHARS
    55→HEXDIGIT_CHARS
    57→BASIC_STR_ESCAPE_REPLACEMENTS
    71→class DEPRECATED_DEFAULT
    76→class TOMLDecodeError
    87→    def __init__
   137→def load
   149→def loads
   220→class Flags
   229→    def __init__
   233→    def add_pending
   236→    def finalize_pending
   241→    def unset_all
   249→    def set
   260→    def is_
   278→class NestedDict
   279→    def __init__
   283→    def get_or_create_nest
   300→    def append_nest_to_list
   312→class Output
   313→    def __init__
   318→def skip_chars
   327→def skip_until
   349→def skip_comment
   361→def skip_comments_and_array_ws
   370→def create_dict_rule
   390→def create_list_rule
   413→def key_value_rule
   447→def parse_key_value_pair
   463→def parse_key
   481→def parse_key_part
   497→def parse_one_line_basic_str
   502→def parse_array
   528→def parse_inline_table
   564→def parse_basic_str_escape
   595→def parse_basic_str_escape_multiline
   599→def parse_hex_char
   612→def parse_literal_str
   621→def parse_multiline_str
   652→def parse_basic_str
   684→def parse_value
   760→def is_unicode_scalar_value
   764→def make_safe_parse_float
_re.py
    11→TYPE_CHECKING
    17→_TIME_RE_STR
    26→RE_NUMBER
    45→RE_LOCALTIME
    46→RE_DATETIME
    59→def match_to_datetime
    99→def cached_tz
   109→def match_to_localtime
   116→def match_to_number
_types.py
